implemented reset-password features
